chore(demos): remove vanilla links from all component demos

--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -61,6 +61,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -81,7 +82,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-accordion--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=accordion',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
     }}
@@ -95,3 +95,4 @@ usage documentation, see the Storybooks for each framework below.
   `}
   </ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
