--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -48,6 +48,7 @@ extra click; instead use a full scrolling page with normal headers.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -67,7 +68,6 @@ extra click; instead use a full scrolling page with normal headers.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-accordion--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=accordion',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
     }}>
@@ -80,6 +80,7 @@ extra click; instead use a full scrolling page with normal headers.
   `}
   </ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
