--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -61,6 +61,7 @@ type used should be consistent across a product.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     { id: 'breadcrumb', label: 'Breadcrumb' },
@@ -78,7 +79,6 @@ type used should be consistent across a product.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}
@@ -97,7 +97,6 @@ type used should be consistent across a product.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}
@@ -109,6 +108,7 @@ type used should be consistent across a product.
 </Breadcrumb>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
