--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -82,6 +82,7 @@ actions.
 
 import { Add16 } from '@carbon/icons-react';
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   scope={{ Add16 }}
   components={[
@@ -110,7 +111,6 @@ import { Add16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
@@ -128,7 +128,6 @@ import { Add16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
@@ -146,7 +145,6 @@ import { Add16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}
@@ -160,6 +158,7 @@ import { Add16 } from '@carbon/icons-react';
       />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
