--- a/src/pages/components/checkbox/code.mdx
+++ b/src/pages/components/checkbox/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -77,7 +78,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-checkbox--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}
@@ -89,3 +89,4 @@ documentation, see the Storybooks for each framework below.
 </fieldset>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
