--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -60,6 +60,7 @@ length use cases—inline, single line, and multi-line.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   scope={{ codeSnippet, codeSnippetSingle }}
   components={[
@@ -86,7 +87,6 @@ length use cases—inline, single line, and multi-line.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}
@@ -102,7 +102,6 @@ length use cases—inline, single line, and multi-line.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
     }}
@@ -120,7 +119,6 @@ length use cases—inline, single line, and multi-line.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
     }}
@@ -128,6 +126,7 @@ length use cases—inline, single line, and multi-line.
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
