--- a/src/pages/components/content-switcher/code.mdx
+++ b/src/pages/components/content-switcher/code.mdx
@@ -61,6 +61,7 @@ code usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -81,8 +82,6 @@ code usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-content-switcher--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcontentswitcher--default',
-      Vanilla:
-        'https://the-carbon-components.netlify.com/?nav=content-switcher',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default',
     }}
@@ -94,3 +93,4 @@ code usage documentation, see the Storybooks for each framework below.
 </ContentSwitcher>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
