--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -64,6 +64,7 @@ binary decision.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -84,8 +85,6 @@ binary decision.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-content-switcher--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcontentswitcher--default',
-      Vanilla:
-        'https://the-carbon-components.netlify.com/?nav=content-switcher',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default',
     }}
@@ -97,6 +96,7 @@ binary decision.
 </ContentSwitcher>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
