--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -67,6 +67,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -97,7 +98,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}
@@ -138,7 +138,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}
@@ -188,7 +187,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-expansion',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
     }}
@@ -238,7 +236,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-toolbar',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}
@@ -334,6 +331,7 @@ usage documentation, see the Storybooks for each framework below.
 </DataTable>`}
   </ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Sample data
 
