--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -65,6 +65,7 @@ import {
   Download16 as Download,
 } from '@carbon/icons-react';
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -95,7 +96,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}
@@ -136,7 +136,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}
@@ -186,7 +185,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-expansion',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
     }}
@@ -236,7 +234,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-toolbar',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}
@@ -332,6 +329,7 @@ import {
 </DataTable>`}
   </ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
