--- a/src/pages/components/date-picker/code.mdx
+++ b/src/pages/components/date-picker/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -93,7 +94,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--simple',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}
@@ -119,7 +119,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--single',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--single',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--single-with-calendar',
     }}
@@ -145,7 +144,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--range',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--range',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--range-with-calendar',
     }}
@@ -176,7 +174,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-time-picker--simple',
       Vue: 'http://vue.carbondesignsystem.com/?path=/storycomponents-cvdatepicker--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}
@@ -193,3 +190,4 @@ usage documentation, see the Storybooks for each framework below.
     </TimePicker>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
