--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -50,6 +50,7 @@ for scheduling tasks.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -83,7 +84,6 @@ for scheduling tasks.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--simple',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}
@@ -109,7 +109,6 @@ for scheduling tasks.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--single',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--single',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--single-with-calendar',
     }}
@@ -135,7 +134,6 @@ for scheduling tasks.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--range',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--range',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--range-with-calendar',
     }}
@@ -166,7 +164,6 @@ for scheduling tasks.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-time-picker--simple',
       Vue: 'http://vue.carbondesignsystem.com/?path=/storycomponents-cvdatepicker--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}
@@ -183,6 +180,7 @@ for scheduling tasks.
     </TimePicker>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
