--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -62,6 +62,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -94,7 +95,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
     }}
@@ -118,7 +118,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
     }}
@@ -142,7 +141,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}
@@ -163,7 +161,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}
@@ -177,6 +174,7 @@ documentation, see the Storybooks for each framework below.
     />
  `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Sample data
 
