--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -69,6 +69,7 @@ functionality—dropdown, multiselect, and combo box.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -101,7 +102,6 @@ functionality—dropdown, multiselect, and combo box.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
     }}
@@ -125,7 +125,6 @@ functionality—dropdown, multiselect, and combo box.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
     }}
@@ -149,7 +148,6 @@ functionality—dropdown, multiselect, and combo box.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}
@@ -170,7 +168,6 @@ functionality—dropdown, multiselect, and combo box.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}
@@ -184,6 +181,7 @@ functionality—dropdown, multiselect, and combo box.
     />
  `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
