--- a/src/pages/components/file-uploader/code.mdx
+++ b/src/pages/components/file-uploader/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -87,7 +88,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
@@ -118,7 +118,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--drag-and-drop',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
@@ -149,7 +148,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
@@ -159,3 +157,4 @@ usage documentation, see the Storybooks for each framework below.
       </div>
     `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
