--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -54,6 +54,7 @@ file uploader.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -81,7 +82,6 @@ file uploader.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
@@ -112,7 +112,6 @@ file uploader.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--drag-and-drop',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
@@ -143,7 +142,6 @@ file uploader.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
@@ -153,6 +151,7 @@ file uploader.
       </div>
     `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
