--- a/src/pages/components/form/code.mdx
+++ b/src/pages/components/form/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -82,7 +83,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
     }}
@@ -139,3 +139,4 @@ documentation, see the Storybooks for each framework below.
 </Form>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
