--- a/src/pages/components/inline-loading/code.mdx
+++ b/src/pages/components/inline-loading/code.mdx
@@ -59,6 +59,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -78,7 +79,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-inline-loading--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
     }}
@@ -86,3 +86,4 @@ usage documentation, see the Storybooks for each framework below.
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
