--- a/src/pages/components/inline-loading/usage.mdx
+++ b/src/pages/components/inline-loading/usage.mdx
@@ -50,6 +50,7 @@ table, after a primary or secondary button click, or even in a modal.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -69,7 +70,6 @@ table, after a primary or secondary button click, or even in a modal.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-inline-loading--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
     }}
@@ -77,6 +77,7 @@ table, after a primary or secondary button click, or even in a modal.
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
