--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -59,6 +59,7 @@ be used for navigational actions.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -75,13 +76,13 @@ be used for navigational actions.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-link--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
     }}>{`
   <Link href="#">Link</Link>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
