--- a/src/pages/components/list/code.mdx
+++ b/src/pages/components/list/code.mdx
@@ -59,6 +59,8 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
+
 <ComponentDemo
   components={[
     {
@@ -79,7 +81,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
     }}
@@ -115,11 +116,13 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
+
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
     }}
-  >{`
+
+> {`
+
       <UnorderedList>
         <ListItem>
           Unordered list level 1
@@ -142,5 +145,8 @@ documentation, see the Storybooks for each framework below.
           Unordered list level 1
         </ListItem>
       </UnorderedList>
-  `}</ComponentVariant>
+
+`}</ComponentVariant>
+
 </ComponentDemo>
+<!-- prettier-ignore-end -->
