--- a/src/pages/components/list/usage.mdx
+++ b/src/pages/components/list/usage.mdx
@@ -35,6 +35,7 @@ between list items.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -55,7 +56,6 @@ between list items.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
     }}
@@ -91,7 +91,6 @@ between list items.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
     }}
@@ -120,6 +119,7 @@ between list items.
       </UnorderedList>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Variants
 
