--- a/src/pages/components/loading/usage.mdx
+++ b/src/pages/components/loading/usage.mdx
@@ -34,6 +34,7 @@ three seconds.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -51,7 +52,6 @@ three seconds.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-loading--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=loading',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
     }}
@@ -61,6 +61,7 @@ three seconds.
     />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
