--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -91,7 +92,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}
@@ -112,7 +112,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}
@@ -160,7 +159,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
     }}
@@ -182,7 +180,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
     }}
@@ -208,3 +205,4 @@ documentation, see the Storybooks for each framework below.
     </ModalWrapper>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
