--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -71,6 +71,7 @@ destructive or irreversible then use a transactional danger modal.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -102,7 +103,6 @@ destructive or irreversible then use a transactional danger modal.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}
@@ -125,7 +125,6 @@ destructive or irreversible then use a transactional danger modal.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}
@@ -173,7 +172,6 @@ destructive or irreversible then use a transactional danger modal.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
     }}
@@ -195,7 +193,6 @@ destructive or irreversible then use a transactional danger modal.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
     }}
@@ -221,6 +218,7 @@ destructive or irreversible then use a transactional danger modal.
     </ModalWrapper>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
