--- a/src/pages/components/notification/code.mdx
+++ b/src/pages/components/notification/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -83,7 +84,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--toast',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
     }}
@@ -109,7 +109,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
     }}
@@ -125,3 +124,4 @@ usage documentation, see the Storybooks for each framework below.
   </div>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
