--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -51,6 +51,7 @@ product teams also support banners and notification centers.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -74,7 +75,6 @@ product teams also support banners and notification centers.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--toast',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
     }}
@@ -100,7 +100,6 @@ product teams also support banners and notification centers.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
     }}
@@ -116,6 +115,7 @@ product teams also support banners and notification centers.
   </div>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
