--- a/src/pages/components/number-input/code.mdx
+++ b/src/pages/components/number-input/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -80,7 +81,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}
@@ -104,7 +104,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}
@@ -122,3 +121,4 @@ usage documentation, see the Storybooks for each framework below.
         />
     `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
