--- a/src/pages/components/number-input/usage.mdx
+++ b/src/pages/components/number-input/usage.mdx
@@ -29,6 +29,7 @@ or decrease an incremental value.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -49,7 +50,6 @@ or decrease an incremental value.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}
@@ -73,7 +73,6 @@ or decrease an incremental value.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}
@@ -91,6 +90,7 @@ or decrease an incremental value.
         />
     `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
