--- a/src/pages/components/overflow-menu/code.mdx
+++ b/src/pages/components/overflow-menu/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -79,7 +80,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
     }}
@@ -102,3 +102,4 @@ usage documentation, see the Storybooks for each framework below.
     </OverflowMenu>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
