--- a/src/pages/components/overflow-menu/usage.mdx
+++ b/src/pages/components/overflow-menu/usage.mdx
@@ -29,6 +29,7 @@ there is a space constraint.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -47,7 +48,6 @@ there is a space constraint.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
     }}>{`
@@ -69,6 +69,7 @@ there is a space constraint.
     </OverflowMenu>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
