--- a/src/pages/components/pagination/code.mdx
+++ b/src/pages/components/pagination/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -84,7 +85,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-pagination--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
     }}
@@ -109,3 +109,4 @@ usage documentation, see the Storybooks for each framework below.
   </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
