--- a/src/pages/components/pagination/usage.mdx
+++ b/src/pages/components/pagination/usage.mdx
@@ -31,6 +31,7 @@ The default number displayed will vary depending on the context.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -55,7 +56,6 @@ The default number displayed will vary depending on the context.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-pagination--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
     }}
@@ -80,6 +80,7 @@ The default number displayed will vary depending on the context.
   </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Best practices
 
