--- a/src/pages/components/progress-indicator/code.mdx
+++ b/src/pages/components/progress-indicator/code.mdx
@@ -61,6 +61,7 @@ code usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -81,8 +82,6 @@ code usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-progress-indicator--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
-      Vanilla:
-        'https://the-carbon-components.netlify.com/?nav=progress-indicator',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
     }}
@@ -127,3 +126,4 @@ code usage documentation, see the Storybooks for each framework below.
   </div>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
