--- a/src/pages/components/progress-indicator/usage.mdx
+++ b/src/pages/components/progress-indicator/usage.mdx
@@ -30,6 +30,7 @@ percentage of completeness as each task is completed.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -50,8 +51,6 @@ percentage of completeness as each task is completed.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-progress-indicator--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
-      Vanilla:
-        'https://the-carbon-components.netlify.com/?nav=progress-indicator',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
     }}
@@ -96,6 +95,7 @@ percentage of completeness as each task is completed.
   </div>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Best practices
 
