--- a/src/pages/components/radio-button/code.mdx
+++ b/src/pages/components/radio-button/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -79,7 +80,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-radio--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvradiobutton--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=radio-button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
     }}
@@ -112,3 +112,4 @@ usage documentation, see the Storybooks for each framework below.
 </FormGroup>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
