--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -75,6 +75,7 @@ checkboxes allow the user to select multiple options.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -94,7 +95,6 @@ checkboxes allow the user to select multiple options.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-radio--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvradiobutton--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=radio-button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
     }}
@@ -127,6 +127,7 @@ checkboxes allow the user to select multiple options.
 </FormGroup>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
