--- a/src/pages/components/search/usage.mdx
+++ b/src/pages/components/search/usage.mdx
@@ -31,6 +31,7 @@ to aid the user in finding content.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -48,7 +49,6 @@ to aid the user in finding content.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-search--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvsearch--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=search',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
     }}
@@ -59,6 +59,7 @@ to aid the user in finding content.
 />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Variants
 
