--- a/src/pages/components/select/code.mdx
+++ b/src/pages/components/select/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -81,7 +82,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-select--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=select',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
     }}
@@ -124,3 +124,4 @@ documentation, see the Storybooks for each framework below.
 </Select>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
