--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -44,6 +44,7 @@ while the dropdown component can be styled as needed.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -65,7 +66,6 @@ while the dropdown component can be styled as needed.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-select--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=select',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
     }}
@@ -108,6 +108,7 @@ while the dropdown component can be styled as needed.
 </Select>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Variants
 
