--- a/src/pages/components/slider/usage.mdx
+++ b/src/pages/components/slider/usage.mdx
@@ -47,6 +47,7 @@ value range.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -64,7 +65,6 @@ value range.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-slider--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvslider--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=slider',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-slider--default',
     }}
@@ -83,6 +83,7 @@ value range.
 </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Interactions
 
