--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -62,6 +62,7 @@ code usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -83,7 +84,6 @@ code usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-structured-list--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}
@@ -139,7 +139,6 @@ code usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-structured-list--with-selection',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}
@@ -240,3 +239,4 @@ code usage documentation, see the Storybooks for each framework below.
     </StructuredListWrapper>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
