--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -23,6 +23,7 @@ definitions.
 
 import { CheckmarkFilled16 } from '@carbon/icons-react';
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -44,7 +45,6 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-structured-list--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}
@@ -100,7 +100,6 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-structured-list--with-selection',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}
@@ -201,6 +200,7 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
     </StructuredListWrapper>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Content
 
