--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -59,6 +59,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -76,7 +77,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tabs--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}
@@ -114,3 +114,4 @@ documentation, see the Storybooks for each framework below.
 </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
