--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -86,6 +86,7 @@ such as modals, cards, or side panels.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -102,7 +103,6 @@ such as modals, cards, or side panels.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tabs--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}>{`
@@ -139,6 +139,7 @@ such as modals, cards, or side panels.
 </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
