--- a/src/pages/components/tag/usage.mdx
+++ b/src/pages/components/tag/usage.mdx
@@ -54,6 +54,7 @@ that particular category.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -71,7 +72,6 @@ that particular category.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tag--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tag',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
     }}
@@ -90,6 +90,7 @@ that particular category.
 </>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Feedback
 
