--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -87,7 +88,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}
@@ -110,7 +110,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}
@@ -138,7 +137,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--textarea',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
     }}
@@ -156,3 +154,4 @@ usage documentation, see the Storybooks for each framework below.
     </div>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
