--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -36,6 +36,7 @@ reflect the length of the content you expect the user to enter.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -63,7 +64,6 @@ reflect the length of the content you expect the user to enter.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}
@@ -86,7 +86,6 @@ reflect the length of the content you expect the user to enter.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}
@@ -114,7 +113,6 @@ reflect the length of the content you expect the user to enter.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--textarea',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
     }}
@@ -132,6 +130,7 @@ reflect the length of the content you expect the user to enter.
     </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
