--- a/src/pages/components/tile/code.mdx
+++ b/src/pages/components/tile/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -95,7 +96,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
     }}
@@ -115,7 +115,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
     }}
@@ -137,7 +136,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--clickable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}
@@ -184,7 +182,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--selectable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}
@@ -233,7 +230,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--expandable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
     }}
@@ -258,3 +254,4 @@ documentation, see the Storybooks for each framework below.
     </ExpandableTile>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
