--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -62,6 +62,7 @@ modules. Here are some common use cases for when to use tiles:
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -97,7 +98,6 @@ modules. Here are some common use cases for when to use tiles:
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
     }}
@@ -117,7 +117,6 @@ modules. Here are some common use cases for when to use tiles:
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
     }}
@@ -139,7 +138,6 @@ modules. Here are some common use cases for when to use tiles:
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--clickable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}
@@ -186,7 +184,6 @@ modules. Here are some common use cases for when to use tiles:
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--selectable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}
@@ -235,7 +232,6 @@ modules. Here are some common use cases for when to use tiles:
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--expandable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
     }}
@@ -260,6 +256,7 @@ modules. Here are some common use cases for when to use tiles:
     </ExpandableTile>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Tile variants
 
