--- a/src/pages/components/toggle/code.mdx
+++ b/src/pages/components/toggle/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -80,7 +81,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}
@@ -100,7 +100,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}
@@ -113,3 +112,4 @@ documentation, see the Storybooks for each framework below.
     />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
