--- a/src/pages/components/toggle/usage.mdx
+++ b/src/pages/components/toggle/usage.mdx
@@ -39,6 +39,7 @@ user “flips the switch”. They are commonly used for “on/off” switches.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -59,7 +60,6 @@ user “flips the switch”. They are commonly used for “on/off” switches.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}
@@ -79,7 +79,6 @@ user “flips the switch”. They are commonly used for “on/off” switches.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}
@@ -92,6 +91,7 @@ user “flips the switch”. They are commonly used for “on/off” switches.
     />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Content
 
