--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -147,6 +147,7 @@ The exception here is that definition tooltip can be invoked on `hover` or
 
 import { Filter16 } from '@carbon/icons-react';
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -172,7 +173,6 @@ import { Filter16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
     }}
@@ -203,8 +203,7 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-icon--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',https://sass-lang.com/documentation/at-rules/use#with-mixins
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
     }}
@@ -226,7 +225,6 @@ import { Filter16 } from '@carbon/icons-react';
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-definition--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
     }}
@@ -238,6 +236,7 @@ import { Filter16 } from '@carbon/icons-react';
     </TooltipDefinition>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
