--- a/src/pages/components/breadcrumb/code.mdx
+++ b/src/pages/components/breadcrumb/code.mdx
@@ -60,6 +60,7 @@ usage documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     { id: 'breadcrumb', label: 'Breadcrumb' },
@@ -77,7 +78,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}
@@ -96,7 +96,6 @@ usage documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}
@@ -108,3 +107,4 @@ usage documentation, see the Storybooks for each framework below.
 </Breadcrumb>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
