--- a/src/pages/components/button/code.mdx
+++ b/src/pages/components/button/code.mdx
@@ -62,6 +62,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   scope={{ Add16 }}
   components={[
@@ -90,7 +91,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
@@ -108,7 +108,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
@@ -126,7 +125,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}
@@ -140,3 +138,4 @@ documentation, see the Storybooks for each framework below.
       />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
