--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -89,6 +89,7 @@ set whereas radio buttons allow the user to select only one option.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -106,7 +107,6 @@ set whereas radio buttons allow the user to select only one option.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-checkbox--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}
@@ -118,6 +118,7 @@ set whereas radio buttons allow the user to select only one option.
 </fieldset>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
