--- a/src/pages/components/code-snippet/code.mdx
+++ b/src/pages/components/code-snippet/code.mdx
@@ -65,6 +65,7 @@ import {
   codeSnippetSingle,
 } from '../../../data/components/code-snippet.js';
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   scope={{ codeSnippet, codeSnippetSingle }}
   components={[
@@ -91,7 +92,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}
@@ -109,7 +109,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
     }}
@@ -127,7 +126,6 @@ import {
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
     }}
@@ -135,6 +133,7 @@ import {
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Sample data
 
