--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -38,6 +38,7 @@ do you gain by collecting this information?
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -60,7 +61,6 @@ do you gain by collecting this information?
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
     }}
@@ -117,6 +117,7 @@ do you gain by collecting this information?
 </Form>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
 
 ## Formatting
 
