--- a/src/pages/components/link/code.mdx
+++ b/src/pages/components/link/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -77,7 +78,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-link--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
     }}
@@ -85,3 +85,4 @@ documentation, see the Storybooks for each framework below.
   <Link href="#">Link</Link>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
