--- a/src/pages/components/loading/code.mdx
+++ b/src/pages/components/loading/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -77,7 +78,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-loading--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=loading',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
     }}
@@ -87,3 +87,4 @@ documentation, see the Storybooks for each framework below.
     />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
