--- a/src/pages/components/search/code.mdx
+++ b/src/pages/components/search/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -77,7 +78,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-search--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvsearch--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=search',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
     }}
@@ -88,3 +88,4 @@ documentation, see the Storybooks for each framework below.
 />
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
