--- a/src/pages/components/slider/code.mdx
+++ b/src/pages/components/slider/code.mdx
@@ -60,6 +60,7 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- prettier-ignore-start -->
 <ComponentDemo
   components={[
     {
@@ -77,7 +78,6 @@ documentation, see the Storybooks for each framework below.
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-slider--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvslider--default',
-      Vanilla: 'https://the-carbon-components.netlify.com/?nav=slider',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-slider--default',
     }}
@@ -96,3 +96,4 @@ documentation, see the Storybooks for each framework below.
 </div>
   `}</ComponentVariant>
 </ComponentDemo>
+<!-- prettier-ignore-end -->
