update ui shell links

--- a/src/pages/components/UI-shell-left-panel/usage.mdx
+++ b/src/pages/components/UI-shell-left-panel/usage.mdx
@@ -28,8 +28,7 @@ interaction patterns that persist between and across products.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="UI Shell template"
-      href="https://sketch.cloud/s/EjVmA"
-    >
+      href="https://sketch.cloud/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0">
       <MdxIcon name="sketch" />
     </ResourceCard>
   </Column>
